<resources>
    <string name="app_name">Gripit</string>
    <string name="placeholder">placeholder</string>
    <string name="routes_title">Routes</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="route_image_description">Route image</string>

    <string name="blank_fragment">Nothing to see here</string>
    <string name="grade_label">Grade</string>
    <string name="type_label">Type</string>
    <string name="add_date_label">Add Date</string>
    <string name="route_setter_label">Route Setter</string>
    <string name="route_setter_comments_label">Route setter comments</string>
    <string name="image_thumbnail">Image thumbnail</string>
    <string name="play_icon">Play icon</string>

    <string name="video_label_text">Video</string>
    <string name="load_video_description">Load video</string>
    <string name="remove_video_string">Remove video?</string>
    <string name="comments_optional">Comments (optional)</string>
</resources>
