<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.agilefreaks.gripit.details.info.RouteInfoViewModel"/>
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <android.support.constraint.ConstraintLayout
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">


            <TextView
                android:id="@+id/route_grade_label"
                android:layout_width="@dimen/text_view_info_width"
                android:layout_height="@dimen/text_view_info_height"
                android:layout_marginStart="@dimen/margin_medium_large"
                android:text="@string/grade_label"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/route_types_label"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/route_grade"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/route_grade"
                android:layout_width="@dimen/text_view_info_width"
                android:layout_height="@dimen/text_view_info_height"
                android:layout_marginEnd="@dimen/margin_medium_large"
                android:layout_marginStart="@dimen/margin_medium_large"
                android:text="@{viewModel.grade}"
                android:textAlignment="viewEnd"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                app:layout_constraintBaseline_toBaselineOf="@+id/route_grade_label"
                app:layout_constraintLeft_toRightOf="@+id/route_grade_label"
                app:layout_constraintRight_toRightOf="parent"/>

            <View
                style="@style/Widget.Gripit.Item.Divider"
                android:layout_marginBottom="@dimen/margin_medium_large"
                android:layout_marginEnd="@dimen/margin_medium_large"
                android:layout_marginLeft="@dimen/margin_medium_large"
                android:layout_marginRight="@dimen/margin_medium_large"
                android:layout_marginStart="@dimen/margin_medium_large"
                android:layout_marginTop="@dimen/margin_medium_large"
                app:layout_constraintBottom_toTopOf="@+id/route_types"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/route_grade"
                app:layout_constraintVertical_bias="0.511"/>

            <TextView
                android:id="@+id/route_types_label"
                android:layout_width="@dimen/text_view_info_width"
                android:layout_height="@dimen/text_view_info_height"
                android:layout_marginStart="@dimen/margin_medium_large"
                android:text="@string/type_label"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/add_date_label"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/route_types"
                app:layout_constraintTop_toBottomOf="@+id/route_grade_label"/>

            <TextView
                android:id="@+id/route_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium_large"
                android:text="@{viewModel.type}"
                android:textAlignment="viewEnd"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                app:layout_constraintBaseline_toBaselineOf="@+id/route_types_label"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintLeft_toRightOf="@+id/route_types_label"
                app:layout_constraintRight_toRightOf="parent"/>

            <View
                style="@style/Widget.Gripit.Item.Divider"
                android:layout_marginBottom="@dimen/margin_medium_large"
                android:layout_marginEnd="@dimen/margin_medium_large"
                android:layout_marginLeft="@dimen/margin_medium_large"
                android:layout_marginRight="@dimen/margin_medium_large"
                android:layout_marginStart="@dimen/margin_medium_large"
                android:layout_marginTop="@dimen/margin_medium_large"
                app:layout_constraintBottom_toTopOf="@+id/add_date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/route_types"
                app:layout_constraintVertical_bias="0.509"/>

            <TextView
                android:id="@+id/add_date_label"
                android:layout_width="@dimen/text_view_info_width"
                android:layout_height="@dimen/text_view_info_height"
                android:layout_marginStart="@dimen/margin_medium_large"
                android:text="@string/add_date_label"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/route_setter_label"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/add_date"
                app:layout_constraintTop_toBottomOf="@+id/route_types_label"/>

            <TextView
                android:id="@+id/add_date"
                android:layout_width="@dimen/text_view_info_width"
                android:layout_height="@dimen/text_view_info_height"
                android:layout_marginEnd="@dimen/margin_medium_large"
                android:text="@{viewModel.addDate}"
                android:textAlignment="viewEnd"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                app:layout_constraintBaseline_toBaselineOf="@+id/add_date_label"
                app:layout_constraintLeft_toRightOf="@+id/add_date_label"
                app:layout_constraintRight_toRightOf="parent"/>

            <View
                style="@style/Widget.Gripit.Item.Divider"
                android:layout_marginBottom="@dimen/margin_medium_large"
                android:layout_marginEnd="@dimen/margin_medium_large"
                android:layout_marginLeft="@dimen/margin_medium_large"
                android:layout_marginRight="@dimen/margin_medium_large"
                android:layout_marginStart="@dimen/margin_medium_large"
                android:layout_marginTop="@dimen/margin_medium_large"
                app:layout_constraintBottom_toTopOf="@+id/route_setter"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_date"/>

            <TextView
                android:id="@+id/route_setter_label"
                android:layout_width="@dimen/text_view_info_width"
                android:layout_height="@dimen/text_view_info_height"
                android:layout_marginStart="@dimen/margin_medium_large"
                android:text="@string/route_setter_label"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/route_setter_comments_label"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/route_setter"
                app:layout_constraintTop_toBottomOf="@+id/add_date_label"/>

            <TextView
                android:id="@+id/route_setter"
                android:layout_width="@dimen/text_view_info_width"
                android:layout_height="@dimen/text_view_info_height"
                android:layout_marginEnd="@dimen/margin_medium_large"
                android:text="@{viewModel.routeSetter}"
                android:textAlignment="viewEnd"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                app:layout_constraintBaseline_toBaselineOf="@+id/route_setter_label"
                app:layout_constraintLeft_toRightOf="@+id/route_setter_label"
                app:layout_constraintRight_toRightOf="parent"/>

            <View
                style="@style/Widget.Gripit.Item.Divider"
                android:layout_marginBottom="@dimen/margin_medium_large"
                android:layout_marginEnd="@dimen/margin_medium_large"
                android:layout_marginLeft="@dimen/margin_medium_large"
                android:layout_marginRight="@dimen/margin_medium_large"
                android:layout_marginStart="@dimen/margin_medium_large"
                android:layout_marginTop="@dimen/margin_medium_large"
                app:layout_constraintBottom_toTopOf="@+id/route_setter_comments_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/route_setter"/>

            <TextView
                android:id="@+id/route_setter_comments_label"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_view_info_height"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="@dimen/margin_medium_large"
                android:layout_marginRight="@dimen/margin_medium_large"
                android:text="@string/route_setter_comments_label"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/route_setter_label"/>

            <TextView
                android:id="@+id/route_setter_comments"
                android:layout_width="@dimen/route_setter_comments_witdh"
                android:layout_height="@dimen/route_setter_comments_height"
                android:layout_marginBottom="@dimen/text_route_comm_margin_bot"
                android:layout_marginEnd="@dimen/margin_medium_large"
                android:layout_marginLeft="@dimen/margin_medium_large"
                android:layout_marginRight="@dimen/margin_medium_large"
                android:layout_marginStart="@dimen/margin_medium_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@{viewModel.notes}"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/route_setter_comments_label"
                app:layout_constraintVertical_bias="0.017"/>

            <android.support.constraint.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="450dp"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>
</layout>